// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Comments API Browse All Always includes member and post relations 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can browse all comments across posts 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Comment on post 1</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "HTML Ipsum",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Comment on post 2</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can filter by member_id 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can filter by status 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "hidden",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Can order by created_at asc 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Older</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Newer</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Excludes deleted comments 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Published</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Includes deleted comments for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": 0,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Published</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": false,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [],
      "status": "published",
    },
    Object {
      "count": Object {
        "likes": 0,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Deleted</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": false,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [],
      "status": "deleted",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Includes hidden comments with full html for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Hidden comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "hidden",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Includes member relation by default 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": 0,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": false,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Includes post relation when requested 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": null,
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "HTML Ipsum",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Orders by created_at desc by default 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Newer</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Older</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Returns deleted parent as tombstone when it has published replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "parent_id": null,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "deleted",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Published reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member2@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Returns flat list including replies by default 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Parent</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member2@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 2,
    },
  },
}
`;

exports[`Admin Comments API Browse All Returns only top-level with include_nested=false 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>Parent</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API Browse All Supports pagination 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
    Object {
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": Nullable<StringMatching>,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post": Object {
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "title": "Ghostly Kitchen Sink",
        "url": Any<String>,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 2,
      "next": 2,
      "page": 1,
      "pages": 3,
      "prev": null,
      "total": 5,
    },
  },
}
`;

exports[`Admin Comments API Hide Can hide comments 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "427",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide comments 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide comments 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "402",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a reply</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "443",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Hide Can hide replies 3: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": null,
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "hidden",
    },
  ],
}
`;

exports[`Admin Comments API Hide Can hide replies 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "420",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin browse route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment id read route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API Logged in member gets own likes via admin api can get comment liked status by impersonating member via admin get by comment replies route 1: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "x-cache-invalidate": "/api/members/comments/post/618ba1ffbe2896088840a6e1/",
  "x-powered-by": "Express",
}
`;

exports[`Admin Comments API browse by post does not return deleted comments 1: [body] 1`] = `
Object {
  "comments": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API browse by post does not return deleted comments with only deleted replies 1: [body] 1`] = `
Object {
  "comments": Array [],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 0,
    },
  },
}
`;

exports[`Admin Comments API browse by post does not return deleted replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 2,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 2",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post includes all replies in count for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 3,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 2",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "deleted",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post includes hidden replies but not deleted replies in count 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 2,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post returns all replies including deleted for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 3,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "deleted",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 2",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "hidden",
        },
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 3",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "published",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post returns deleted comments as tombstones if they have published replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "parent_id": null,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "published",
        },
      ],
      "status": "deleted",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post returns deleted comments for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [],
      "status": "deleted",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API browse by post returns deleted comments with deleted replies for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 1,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "Comment 1",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member1@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": "Mr Egg",
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "deleted",
        },
      ],
      "status": "deleted",
    },
  ],
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
}
`;

exports[`Admin Comments API get by id does not include deleted replies 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "replies": Array [],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API get by id includes deleted replies for admin 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "count": Object {
        "likes": Any<Number>,
        "replies": 1,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "edited_at": null,
      "html": "<p>This is a comment</p>",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "in_reply_to_id": null,
      "in_reply_to_snippet": null,
      "liked": Any<Boolean>,
      "member": Object {
        "avatar_image": null,
        "email": "member1@test.com",
        "expertise": null,
        "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
        "name": "Mr Egg",
        "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      },
      "parent_id": Nullable<StringMatching>,
      "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "replies": Array [
        Object {
          "count": Object {
            "likes": 0,
          },
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "edited_at": null,
          "html": "Reply 1",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "in_reply_to_id": null,
          "in_reply_to_snippet": null,
          "liked": false,
          "member": Object {
            "avatar_image": null,
            "email": "member2@test.com",
            "expertise": null,
            "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
            "name": null,
            "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
          },
          "parent_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "post_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "status": "deleted",
        },
      ],
      "status": "published",
    },
  ],
}
`;

exports[`Admin Comments API get by id returns deleted comment as tombstone 1: [body] 1`] = `
Object {
  "comments": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "parent_id": null,
      "replies": Array [],
      "status": "deleted",
    },
  ],
}
`;
